--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <title>控制中心</title>
-  <script type="text/javascript" src="//api.map.baidu.com/api?type=webgl&v=1.0&ak=qSM005p27vThOGgtnUQXRThPK4cnwTkj"></script>
+  <script type="text/javascript" src="https://api.map.baidu.com/api?type=webgl&v=1.0&ak=qSM005p27vThOGgtnUQXRThPK4cnwTkj"></script>
 </head>
 
 <body>
